@@ -20,7 +20,6 @@ Joining tables - PRIMARY KEY (table, joining)
 Rank, Tree structure
 
 MySQL:
-Generated columns (MySQL >= 5.7.6)
 Data longer than max_allowed_packet can be sent by mysqli_stmt_send_long_data()
 
 MariaDB:
