@@ -2,6 +2,7 @@ Adminer 4.9.0-dev:
 Validate connection to server in HTTP based drivers
 Elasticsearch 5: Make unusable driver usable again, move it to plugins
 Add new Elasticsearch 7 driver
+MySQL: Skip dump of generated columns
 
 Adminer 4.8.2:
 Support multi-line table comments
